TigerCompiler/TigerParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g 2010-01-12 16:32:03

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


	using TigerCompiler;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "BREAK", "DO", "ELSE", "END", "FOR", "FUNCTION", "IF", "IN", "LET", "NIL", "OF", "THEN", "TO", "TYPE", "VAR", "WHILE", "COMMA", "COLON", "SEMICOLON", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_KEY", "RIGHT_KEY", "DOT", "PLUS", "MINUS", "MULTIPLICATION", "DIVISION", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_EQUAL_THAN", "GREATHER_THAN", "GREATHER_EQUAL_THAN", "AND", "OR", "ASSIGNMENT", "UNARY_MINUS", "IF_THEN", "IF_THEN_ELSE", "EXPRESSION_SET", "INDEXER", "TUPLE", "FIELD", "TYPE_FIELD", "VARIABLE_DECLARATION", "ARRAY_DECLARATION", "RECORD_ASSIGNMENT", "RECORD_ASSIGNMENT_ACCESS", "PROCEDURE_DECLARATION", "EXPLICIT_TYPE_DECLARATION", "RECORD_TYPE_DECLARATION", "ARRAY_TYPE_DECLARATION", "VARIABLE_TYPE_DECLARATION", "FUNCTION_DECLARATION", "RECORD_ACCESS", "FUNCTION_CALL", "FUNCTION_CALL_INDEXER", "LETTER", "DIGIT", "ID", "INT", "HEX_DIGIT", "CLOSE_LINE_COMMENT", "LINE_COMMENT", "BLOCK_COMMENT", "COMMENT", "WHITE_SPACE", "ESC_SEQ", "STRING"
	};
	public const int EOF=-1;
	public const int ARRAY=4;
	public const int BREAK=5;
	public const int DO=6;
	public const int ELSE=7;
	public const int END=8;
	public const int FOR=9;
	public const int FUNCTION=10;
	public const int IF=11;
	public const int IN=12;
	public const int LET=13;
	public const int NIL=14;
	public const int OF=15;
	public const int THEN=16;
	public const int TO=17;
	public const int TYPE=18;
	public const int VAR=19;
	public const int WHILE=20;
	public const int COMMA=21;
	public const int COLON=22;
	public const int SEMICOLON=23;
	public const int LEFT_PARENTHESIS=24;
	public const int RIGHT_PARENTHESIS=25;
	public const int LEFT_BRACKET=26;
	public const int RIGHT_BRACKET=27;
	public const int LEFT_KEY=28;
	public const int RIGHT_KEY=29;
	public const int DOT=30;
	public const int PLUS=31;
	public const int MINUS=32;
	public const int MULTIPLICATION=33;
	public const int DIVISION=34;
	public const int EQUAL=35;
	public const int NOT_EQUAL=36;
	public const int LESS_THAN=37;
	public const int LESS_EQUAL_THAN=38;
	public const int GREATHER_THAN=39;
	public const int GREATHER_EQUAL_THAN=40;
	public const int AND=41;
	public const int OR=42;
	public const int ASSIGNMENT=43;
	public const int UNARY_MINUS=44;
	public const int IF_THEN=45;
	public const int IF_THEN_ELSE=46;
	public const int EXPRESSION_SET=47;
	public const int INDEXER=48;
	public const int TUPLE=49;
	public const int FIELD=50;
	public const int TYPE_FIELD=51;
	public const int VARIABLE_DECLARATION=52;
	public const int ARRAY_DECLARATION=53;
	public const int RECORD_ASSIGNMENT=54;
	public const int RECORD_ASSIGNMENT_ACCESS=55;
	public const int PROCEDURE_DECLARATION=56;
	public const int EXPLICIT_TYPE_DECLARATION=57;
	public const int RECORD_TYPE_DECLARATION=58;
	public const int ARRAY_TYPE_DECLARATION=59;
	public const int VARIABLE_TYPE_DECLARATION=60;
	public const int FUNCTION_DECLARATION=61;
	public const int RECORD_ACCESS=62;
	public const int FUNCTION_CALL=63;
	public const int FUNCTION_CALL_INDEXER=64;
	public const int LETTER=65;
	public const int DIGIT=66;
	public const int ID=67;
	public const int INT=68;
	public const int HEX_DIGIT=69;
	public const int CLOSE_LINE_COMMENT=70;
	public const int LINE_COMMENT=71;
	public const int BLOCK_COMMENT=72;
	public const int COMMENT=73;
	public const int WHITE_SPACE=74;
	public const int ESC_SEQ=75;
	public const int STRING=76;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				true, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, true, false, false, false, false, false, false, false, 
				false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public TigerParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g"; } }


		public List<Error> Errors = new List<Error>();

		public override string GetErrorMessage(RecognitionException e, string[] tokenNames)
		{
		    var message = "Syntactic Error";
		
		    if (e is UnwantedTokenException)
		    {
		        var unwantedTokenException = (UnwantedTokenException) e;
		        message = string.Format("Unexpected token {0}. {1} expected.",
		                                GetTokenErrorDisplay(unwantedTokenException.UnexpectedToken),
		                                unwantedTokenException.Expecting == EOF
		                                    ? "EOF"
		                                    : tokenNames[unwantedTokenException.Expecting]);
		    }
		
	    	    if (e is MissingTokenException)
		    {
		        var missingTokenException = (MissingTokenException) e;
		        message = string.Format("Missing token {0} in {1}.",
		                                missingTokenException.Expecting == EOF
		                                    ? "EOF"
		                                    : tokenNames[missingTokenException.Expecting],
		                                GetTokenErrorDisplay(e.Token));
		    }
		
	    	    if (e is MismatchedTokenException)
		    {
		        var mismatchedTokenException = (MismatchedTokenException)e;
		        message = string.Format("Unexpected token {0}. {1} expected.",
		                                GetTokenErrorDisplay(e.Token),
		                                mismatchedTokenException.Expecting == EOF
		                                    ? "EOF"
		                                    : tokenNames[mismatchedTokenException.Expecting]);
		    }
		
	    	    if (e is MismatchedTreeNodeException)
		    {
		        var mismatchedtreeNodeException = (MismatchedTreeNodeException) e;
		        message = string.Format("Mismatched tree node: {0}. {1} expected.",
		                                mismatchedtreeNodeException.Node ?? string.Empty,
		                                mismatchedtreeNodeException.Expecting == EOF
		                                    ? "EOF"
		                                    : tokenNames[mismatchedtreeNodeException.Expecting]);
		    }
		
	    	    if (e is MismatchedSetException)
		    {
		        var mismatchedSetException = (MismatchedSetException) e;
		        message = string.Format("Unexpected token {0}. {1} expected.",
		                                GetTokenErrorDisplay(e.Token),
		                                mismatchedSetException.Expecting);
		    }
		
	    	    if (e is MismatchedNotSetException)
		    {
		        var mismatchedNotSetException = (MismatchedSetException)e;
		        message = string.Format("Unexpected token {0}. {1} expected.",
		                                GetTokenErrorDisplay(e.Token),
		                                mismatchedNotSetException.Expecting);
		    }
		
	    	    if (e is FailedPredicateException)
		    {
		        var predicateException = (FailedPredicateException) e;
		        message = string.Format("Failed predicate: {0}{1}{2} in rule {3}", '{', predicateException.PredicateText,
		                                '}', predicateException.RuleName);
		    }
		
	    	    if (e is NoViableAltException)
		        message = string.Format("Cannot resolve symbol {0}", GetTokenErrorDisplay(e.Token));
		
	    	    if (e is EarlyExitException)
		        message = string.Format("Unexpected token {0}", GetTokenErrorDisplay(e.Token));
		
	    	    Errors.Add(new Error(message, e.Line, e.CharPositionInLine));
		    return message;
		}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_program();
	partial void Leave_program();

	// $ANTLR start "program"
	// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:334:8: public program : expression EOF ;
	[GrammarRule("program")]
	public TigerParser.program_return program()
	{
		Enter_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		TigerParser.program_return retval = new TigerParser.program_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken EOF2=null;
		TigerParser.expression_return expression1 = default(TigerParser.expression_return);

		object EOF2_tree=null;

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(334, 1);
		try
		{
			// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:335:2: ( expression EOF )
			DebugEnterAlt(1);
			// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:335:4: expression EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(335, 4);
			PushFollow(Follow._expression_in_program1085);
			expression1=expression();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expression1.Tree);
			DebugLocation(335, 18);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program1087); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			Leave_program();
		}
		DebugLocation(336, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	public class expression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expression();
	partial void Leave_expression();

	// $ANTLR start "expression"
	// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:338:1: expression : ( ( left_value_assignment ASSIGNMENT )=>leftValue= left_value_assignment ASSIGNMENT rightConjunctiveExpression= conjunctive_expression | conjunctive_expression );
	[GrammarRule("expression")]
	private TigerParser.expression_return expression()
	{
		Enter_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		TigerParser.expression_return retval = new TigerParser.expression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken ASSIGNMENT3=null;
		TigerParser.left_value_assignment_return leftValue = default(TigerParser.left_value_assignment_return);
		TigerParser.conjunctive_expression_return rightConjunctiveExpression = default(TigerParser.conjunctive_expression_return);
		TigerParser.conjunctive_expression_return conjunctive_expression4 = default(TigerParser.conjunctive_expression_return);

		object ASSIGNMENT3_tree=null;

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(338, 1);
		try
		{
			// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:339:2: ( ( left_value_assignment ASSIGNMENT )=>leftValue= left_value_assignment ASSIGNMENT rightConjunctiveExpression= conjunctive_expression | conjunctive_expression )
			int alt1=2;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			try
			{
				alt1 = dfa1.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:339:4: ( left_value_assignment ASSIGNMENT )=>leftValue= left_value_assignment ASSIGNMENT rightConjunctiveExpression= conjunctive_expression
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(339, 52);
				PushFollow(Follow._left_value_assignment_in_expression1111);
				leftValue=left_value_assignment();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, leftValue.Tree);
				DebugLocation(339, 86);
				ASSIGNMENT3=(IToken)Match(input,ASSIGNMENT,Follow._ASSIGNMENT_in_expression1113); if (state.failed) return retval;
				if ( state.backtracking == 0 ) {
				ASSIGNMENT3_tree = (object)adaptor.Create(ASSIGNMENT3);
				root_0 = (object)adaptor.BecomeRoot(ASSIGNMENT3_tree, root_0);
				}
				DebugLocation(339, 115);
				PushFollow(Follow._conjunctive_expression_in_expression1120);
				rightConjunctiveExpression=conjunctive_expression();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, rightConjunctiveExpression.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:340:5: conjunctive_expression
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(340, 5);
				PushFollow(Follow._conjunctive_expression_in_expression1126);
				conjunctive_expression4=conjunctive_expression();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, conjunctive_expression4.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			Leave_expression();
		}
		DebugLocation(341, 1);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return retval;

	}
	// $ANTLR end "expression"

	public class left_value_assignment_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_left_value_assignment();
	partial void Leave_left_value_assignment();

	// $ANTLR start "left_value_assignment"
	// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:343:1: left_value_assignment : leftId= id (recordAccess= record_access[(CommonTree)leftId.Tree] leftValue= left_value[(CommonTree)recordAccess.Tree] -> $leftValue | ind= indexer[(CommonTree)leftId.Tree] leftValue= left_value[(CommonTree)ind.Tree] -> $leftValue | -> $leftId) ;
	[GrammarRule("left_value_assignment")]
	private TigerParser.left_value_assignment_return left_value_assignment()
	{
		Enter_left_value_assignment();
		EnterRule("left_value_assignment", 3);
		TraceIn("left_value_assignment", 3);
		TigerParser.left_value_assignment_return retval = new TigerParser.left_value_assignment_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		TigerParser.id_return leftId = default(TigerParser.id_return);
		TigerParser.record_access_return recordAccess = default(TigerParser.record_access_return);
		TigerParser.left_value_return leftValue = default(TigerParser.left_value_return);
		TigerParser.indexer_return ind = default(TigerParser.indexer_return);

		RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
		RewriteRuleSubtreeStream stream_left_value=new RewriteRuleSubtreeStream(adaptor,"rule left_value");
		RewriteRuleSubtreeStream stream_indexer=new RewriteRuleSubtreeStream(adaptor,"rule indexer");
		RewriteRuleSubtreeStream stream_record_access=new RewriteRuleSubtreeStream(adaptor,"rule record_access");
		try { DebugEnterRule(GrammarFileName, "left_value_assignment");
		DebugLocation(343, 1);
		try
		{
			// C:\\Users\\chino23\\Desktop\\CODIGO\\Tiger.g:344:2: (leftId= id (recordAccess= record_access[(CommonTree)leftId.Tree] leftValue= left_value[(CommonTree)recordAccess.Tree] -> $leftValue | ind= indexer[(CommonTree)leftId.Tree] leftValue= left_value[(CommonTree)ind.Tree] -> $leftValue | -> $leftId) )
			DebugEnterAlt(1);
